Update from GameEngine

--- a/DX9MapEditor2D.vcxproj
+++ b/DX9MapEditor2D.vcxproj
@@ -155,24 +155,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Core\DX9Base.h" />
     <ClInclude Include="Core\DX9Common.h" />
     <ClInclude Include="Core\DX9Image.h" />
     <ClInclude Include="Core\DX9Input.h" />
     <ClInclude Include="Core\DX9Line.h" />
+    <ClInclude Include="Core\DX9Window.h" />
     <ClInclude Include="DX9MapEditor.h" />
-    <ClInclude Include="DX9Map.h" />
     <ClInclude Include="DX9TileSelector.h" />
+    <ClInclude Include="Game\DX9Map.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Core\DX9Base.cpp" />
     <ClCompile Include="Core\DX9Image.cpp" />
     <ClCompile Include="Core\DX9Input.cpp" />
     <ClCompile Include="Core\DX9Line.cpp" />
+    <ClCompile Include="Core\DX9Window.cpp" />
     <ClCompile Include="DX9MapEditor.cpp" />
-    <ClCompile Include="DX9Map.cpp" />
     <ClCompile Include="DX9TileSelector.cpp" />
+    <ClCompile Include="Game\DX9Map.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
